[package]
name = "read-progress-stream"
version = "0.2.0"
description = "Stream wrapper for a tokio File that reports the progress of bytes read"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
repository = "https://github.com/tmpfs/read-progress-stream"
license = "MIT OR Apache-2.0"
keywords = [
  "tokio",
  "stream",
  "rusoto",
  "s3",
  "upload"
]

[dependencies]
tokio = { version = "0.2.22", features = ["fs"] }
tokio-util = { version = "0.3", default-features = false, features = ["codec"] }
bytes = "0.5"
futures = "0.3"
futures-util = { version = "0.3.4" }
pin-project-lite = "0.2"
