[package]
name = "read-progress-stream"
version = "1.0.0"
description = "Stream reader wrapper that tracks the number of bytes read"
authors = ["muji <muji@tmpfs.org>"]
edition = "2018"
repository = "https://github.com/tmpfs/read-progress-stream"
license = "MIT OR Apache-2.0"
keywords = [
  "tokio",
  "stream",
  "rusoto",
  "s3",
  "upload"
]

[dependencies]
bytes = "^1"
futures = "^0.3"
pin-project-lite = "^0.2"

[dev-dependencies]
tokio = { version = "^1.0", features = ["full"] }
tokio-util = { version = "^0.6", features = ["codec"] }
rusoto_core = "^0.46.0"
pbr = "^1.0.4"
